--- a/source/index.html
+++ b/source/index.html
@@ -8,9 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="Kozyrev Ilya" />
     <title>Компания</title>
+    <link href="fonts/OpenSansCondensed-Light.woff2" rel="preload" as="font" crossorigin>
+    <link href="fonts/PTSans-Regular.woff2" rel="preload" as="font" crossorigin>
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
+    <p class="ptsans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero totam quo, omnis repellendus recusandae rem veritatis voluptate assumenda esse aut quod nam minus eligendi ullam eius provident. Quas, maxime unde.</p>
+    <p class="opensans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe tempora enim beatae repudiandae. Ipsam consectetur iure quidem. Vero aliquam perferendis praesentium quidem libero necessitatibus. Dicta libero magni facere itaque molestiae.</p>
     <script src="js/vendor.js"></script>
     <script src="js/main.js"></script>
   </body>
