--- a/source/index.html
+++ b/source/index.html
@@ -3,18 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="самая, клевая, компания, бытовая техника, мобильная техника, компьютеры, одежда, недвижимость, купить" />
+    <meta
+      name="keywords"
+      content="самая, клевая, компания, бытовая техника, мобильная техника, компьютеры, одежда, недвижимость, купить"
+    />
     <meta name="description" content="самая клевая компания" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="Kozyrev Ilya" />
     <title>Компания</title>
-    <link href="fonts/OpenSansCondensed-Light.woff2" rel="preload" as="font" crossorigin>
-    <link href="fonts/PTSans-Regular.woff2" rel="preload" as="font" crossorigin>
+    <link
+      href="fonts/OpenSansCondensed-Light.woff2"
+      rel="preload"
+      as="font"
+      crossorigin
+    />
+    <link
+      href="fonts/PTSans-Regular.woff2"
+      rel="preload"
+      as="font"
+      crossorigin
+    />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
-    <p class="ptsans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero totam quo, omnis repellendus recusandae rem veritatis voluptate assumenda esse aut quod nam minus eligendi ullam eius provident. Quas, maxime unde.</p>
-    <p class="opensans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe tempora enim beatae repudiandae. Ipsam consectetur iure quidem. Vero aliquam perferendis praesentium quidem libero necessitatibus. Dicta libero magni facere itaque molestiae.</p>
+    <div class="container">
+      <p class="ptsans">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero totam
+        quo, omnis repellendus recusandae rem veritatis voluptate assumenda esse
+        aut quod nam minus eligendi ullam eius provident. Quas, maxime unde.
+      </p>
+      <p class="opensans">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe tempora
+        enim beatae repudiandae. Ipsam consectetur iure quidem. Vero aliquam
+        perferendis praesentium quidem libero necessitatibus. Dicta libero magni
+        facere itaque molestiae.
+      </p>
+    </div>
     <script src="js/vendor.js"></script>
     <script src="js/main.js"></script>
   </body>
