--- a/source/index.html
+++ b/source/index.html
@@ -23,22 +23,50 @@
       as="font"
       crossorigin
     />
+    <link
+      href="fonts/PTSans-Bold.woff2"
+      rel="preload"
+      as="font"
+      crossorigin
+    />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
-    <div class="container">
-      <p class="ptsans">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero totam
-        quo, omnis repellendus recusandae rem veritatis voluptate assumenda esse
-        aut quod nam minus eligendi ullam eius provident. Quas, maxime unde.
-      </p>
-      <p class="opensans">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe tempora
-        enim beatae repudiandae. Ipsam consectetur iure quidem. Vero aliquam
-        perferendis praesentium quidem libero necessitatibus. Dicta libero magni
-        facere itaque molestiae.
-      </p>
-    </div>
+    <header class="header">
+      <div class="container container--header">
+        <div class="header__logo logo">
+          <a class="logo__link">
+            <picture>
+              <source
+                type="image/webp"
+                srcset="img/logo@1x.webp 1x, img/logo@2x.webp 2x"
+              />
+              <img
+                class="logo__image"
+                src="img/logo@1x.png"
+                srcset="img/logo@2x.png 2x"
+                alt="Название компании"
+                width="273"
+                height="100"
+              />
+            </picture>
+          </a>
+        </div>
+        <div class="header__contacts contacts">
+          <p class="contacts__wrapper">
+            <a class="contacts__link" href="tel:74997777777">+7(499) 777-77-77</a>
+          </p>
+          <p class="contacts__wrapper">
+            <a class="contacts__link" href="tel:74997777777">+7(499) 777-77-77</a>
+          </p>
+          <button class="contacts__callback-btn">
+            <span>Обратная связь</span>
+          </button>
+        </div>
+      </div>
+    </header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
     <script src="js/vendor.js"></script>
     <script src="js/main.js"></script>
   </body>
