добавляет черновики для слайдера

--- a/source/index.html
+++ b/source/index.html
@@ -65,7 +65,17 @@
         </div>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <div class="slider">
+        <ul class="slider-container">
+          <li class="slide slide--red">1</li>
+          <li class="slide slide--green">2</li>
+          <li class="slide slide--blue">3</li>
+        </ul>
+        <button class="left">Left</button>
+        <button class="right">Right</button>
+      </div>
+    </main>
     <footer class="footer"></footer>
     <script src="js/vendor.js"></script>
     <script src="js/main.js"></script>
