добавляет верстку и стили для блока catalog__aside

--- a/source/index.html
+++ b/source/index.html
@@ -180,6 +180,55 @@
           </li>
         </ul>
       </div>
+      <section class="catalog">
+        <div class="container container--catalog">
+          <aside class="catalog__aside">
+            <ul class="catalog__navigation-list navigation">
+              <li class="navigation__item">
+                <a class="navigation__link" href="#">Автомобили</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="#">Бытовая техника</a>
+                <ul class="navigation__sublist">
+                  <li class="navigation__subitem">
+                    <a class="navigation__sublink" href="#">Микроволновки</a>
+                  </li>
+                  <li class="navigation__subitem">
+                    <a class="navigation__sublink" href="#">Холодильники</a>
+                  </li>
+                  <li class="navigation__subitem">
+                    <a class="navigation__sublink" href="#">Посудомоечные машины</a>
+                  </li>
+                  <li class="navigation__subitem">
+                    <a class="navigation__sublink" href="#">Чайники</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="#">Мобильная техника</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="#">Компьютеры</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="#">Одежда</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="#">Недвижимость</a>
+              </li>
+            </ul>
+            <div class="catalog__price price">
+              <a class="price__link" href="#">
+                <picture>
+                  <source type="image/webp" srcset="img/exel@1x.webp 1x, img/exel@2x.webp 2x">
+                  <img class="price__image" src="img/exel@1x.png" srcset="img/exel@2x.png 2x" alt="Прайс-лист в Exel" width="97" height="111">
+                </picture>
+                Прайс-лист
+              </a>
+            </div>
+          </aside>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
     <script src="js/vendor.js"></script>
