добавляет стили для карточки товара

--- a/source/index.html
+++ b/source/index.html
@@ -230,7 +230,7 @@
             </div>
           </aside>
           <div class="catalog__main">
-            <ul class="goods">
+            <ul class="catalog__goods goods">
               <li class="goods__item card">
                 <h3 class="card__title">Самый клевый чайник, который надо купить!</h3>
                 <picture>
@@ -307,7 +307,6 @@
       </section>
     </main>
     <footer class="footer"></footer>
-    <script src="js/vendor.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
