добавляет разметку и стили для пагинации

--- a/source/index.html
+++ b/source/index.html
@@ -302,6 +302,31 @@
                 </button>
               </li>
             </ul>
+            <div class="catalog__pagination">
+              <ul class="pagination">
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">1</a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">2</a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link pagination__link--current" href="#">3</a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">4</a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">5</a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">6</a>
+                </li>
+                <li class="pagination__item">
+                  <a class="pagination__link" href="#">7</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
