добавляет разметку и стили для блока about-us

--- a/source/index.html
+++ b/source/index.html
@@ -153,7 +153,10 @@
               <picture>
                 <source
                   type="image/webp"
-                  srcset="img/arrow-right@1x.webp 1x, img/arrow-right@2x.webp 2x"
+                  srcset="
+                    img/arrow-right@1x.webp 1x,
+                    img/arrow-right@2x.webp 2x
+                  "
                 />
                 <img
                   src="img/arrow-right@1x.png"
@@ -177,7 +180,9 @@
             <a class="breadcrumbs__link" href="#">Каталог</a>
           </li>
           <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link breadcrumbs__link--current">Бытовая техника</a>
+            <a class="breadcrumbs__link breadcrumbs__link--current"
+              >Бытовая техника</a
+            >
           </li>
         </ul>
       </div>
@@ -199,7 +204,9 @@
                     <a class="navigation__sublink" href="#">Холодильники</a>
                   </li>
                   <li class="navigation__subitem">
-                    <a class="navigation__sublink" href="#">Посудомоечные машины</a>
+                    <a class="navigation__sublink" href="#"
+                      >Посудомоечные машины</a
+                    >
                   </li>
                   <li class="navigation__subitem">
                     <a class="navigation__sublink" href="#">Чайники</a>
@@ -222,8 +229,18 @@
             <div class="catalog__price price">
               <a class="price__link" href="#">
                 <picture>
-                  <source type="image/webp" srcset="img/exel@1x.webp 1x, img/exel@2x.webp 2x">
-                  <img class="price__image" src="img/exel@1x.png" srcset="img/exel@2x.png 2x" alt="Прайс-лист в Exel" width="97" height="111">
+                  <source
+                    type="image/webp"
+                    srcset="img/exel@1x.webp 1x, img/exel@2x.webp 2x"
+                  />
+                  <img
+                    class="price__image"
+                    src="img/exel@1x.png"
+                    srcset="img/exel@2x.png 2x"
+                    alt="Прайс-лист в Exel"
+                    width="97"
+                    height="111"
+                  />
                 </picture>
                 Прайс-лист
               </a>
@@ -232,72 +249,197 @@
           <div class="catalog__main">
             <ul class="catalog__goods goods">
               <li class="goods__item card">
-                <h3 class="card__title">Самый клевый чайник, который надо купить!</h3>
+                <h3 class="card__title">
+                  Самый клевый чайник, который надо купить!
+                </h3>
                 <picture>
-                  <source type="image/webp" srcset="img/nophoto@1x.webp 1x, img/nophoto@2x.webp 2x">
-                  <img class="card__image" src="img/nophoto@1x.png" srcset="img/nophoto@2x.png 2x" alt="Самый клевый чайник" width="210" height="209">
+                  <source
+                    type="image/webp"
+                    srcset="img/nophoto@1x.webp 1x, img/nophoto@2x.webp 2x"
+                  />
+                  <img
+                    class="card__image"
+                    src="img/nophoto@1x.png"
+                    srcset="img/nophoto@2x.png 2x"
+                    alt="Самый клевый чайник"
+                    width="210"
+                    height="209"
+                  />
                 </picture>
                 <p class="card__price">1 900 р.</p>
-                <button class="card__order-btn" aria-label="Добавить товар в корзину">
+                <button
+                  class="card__order-btn"
+                  aria-label="Добавить товар в корзину"
+                >
                   <picture>
-                    <source type="image/webp" srcset="img/basket@1x.webp 1x, img/basket@2x.webp 2x">
-                    <img class="card__order-image" src="img/basket@1x.png" srcset="img/basket@2x.png 2x" alt="Добавить товар в корзину" width="28" height="21">
+                    <source
+                      type="image/webp"
+                      srcset="img/basket@1x.webp 1x, img/basket@2x.webp 2x"
+                    />
+                    <img
+                      class="card__order-image"
+                      src="img/basket@1x.png"
+                      srcset="img/basket@2x.png 2x"
+                      alt="Добавить товар в корзину"
+                      width="28"
+                      height="21"
+                    />
                   </picture>
                 </button>
               </li>
               <li class="goods__item card">
-                <h3 class="card__title">Самый клевый чайник, который надо купить!</h3>
+                <h3 class="card__title">
+                  Самый клевый чайник, который надо купить!
+                </h3>
                 <picture>
-                  <source type="image/webp" srcset="img/nophoto@1x.webp 1x, img/nophoto@2x.webp 2x">
-                  <img class="card__image" src="img/nophoto@1x.png" srcset="img/nophoto@2x.png 2x" alt="Самый клевый чайник" width="210" height="209">
+                  <source
+                    type="image/webp"
+                    srcset="img/nophoto@1x.webp 1x, img/nophoto@2x.webp 2x"
+                  />
+                  <img
+                    class="card__image"
+                    src="img/nophoto@1x.png"
+                    srcset="img/nophoto@2x.png 2x"
+                    alt="Самый клевый чайник"
+                    width="210"
+                    height="209"
+                  />
                 </picture>
                 <p class="card__price">1 900 р.</p>
-                <button class="card__order-btn" aria-label="Добавить товар в корзину">
+                <button
+                  class="card__order-btn"
+                  aria-label="Добавить товар в корзину"
+                >
                   <picture>
-                    <source type="image/webp" srcset="img/basket@1x.webp 1x, img/basket@2x.webp 2x">
-                    <img class="card__order-image" src="img/basket@1x.png" srcset="img/basket@2x.png 2x" alt="Добавить товар в корзину" width="28" height="21">
+                    <source
+                      type="image/webp"
+                      srcset="img/basket@1x.webp 1x, img/basket@2x.webp 2x"
+                    />
+                    <img
+                      class="card__order-image"
+                      src="img/basket@1x.png"
+                      srcset="img/basket@2x.png 2x"
+                      alt="Добавить товар в корзину"
+                      width="28"
+                      height="21"
+                    />
                   </picture>
                 </button>
               </li>
               <li class="goods__item card">
-                <h3 class="card__title">Самый клевый чайник, который надо купить!</h3>
+                <h3 class="card__title">
+                  Самый клевый чайник, который надо купить!
+                </h3>
                 <picture>
-                  <source type="image/webp" srcset="img/nophoto@1x.webp 1x, img/nophoto@2x.webp 2x">
-                  <img class="card__image" src="img/nophoto@1x.png" srcset="img/nophoto@2x.png 2x" alt="Самый клевый чайник" width="210" height="209">
+                  <source
+                    type="image/webp"
+                    srcset="img/nophoto@1x.webp 1x, img/nophoto@2x.webp 2x"
+                  />
+                  <img
+                    class="card__image"
+                    src="img/nophoto@1x.png"
+                    srcset="img/nophoto@2x.png 2x"
+                    alt="Самый клевый чайник"
+                    width="210"
+                    height="209"
+                  />
                 </picture>
                 <p class="card__price">1 900 р.</p>
-                <button class="card__order-btn" aria-label="Добавить товар в корзину">
+                <button
+                  class="card__order-btn"
+                  aria-label="Добавить товар в корзину"
+                >
                   <picture>
-                    <source type="image/webp" srcset="img/basket@1x.webp 1x, img/basket@2x.webp 2x">
-                    <img class="card__order-image" src="img/basket@1x.png" srcset="img/basket@2x.png 2x" alt="Добавить товар в корзину" width="28" height="21">
+                    <source
+                      type="image/webp"
+                      srcset="img/basket@1x.webp 1x, img/basket@2x.webp 2x"
+                    />
+                    <img
+                      class="card__order-image"
+                      src="img/basket@1x.png"
+                      srcset="img/basket@2x.png 2x"
+                      alt="Добавить товар в корзину"
+                      width="28"
+                      height="21"
+                    />
                   </picture>
                 </button>
               </li>
               <li class="goods__item card">
-                <h3 class="card__title">Самый клевый чайник, который надо купить!</h3>
+                <h3 class="card__title">
+                  Самый клевый чайник, который надо купить!
+                </h3>
                 <picture>
-                  <source type="image/webp" srcset="img/nophoto@1x.webp 1x, img/nophoto@2x.webp 2x">
-                  <img class="card__image" src="img/nophoto@1x.png" srcset="img/nophoto@2x.png 2x" alt="Самый клевый чайник" width="210" height="209">
+                  <source
+                    type="image/webp"
+                    srcset="img/nophoto@1x.webp 1x, img/nophoto@2x.webp 2x"
+                  />
+                  <img
+                    class="card__image"
+                    src="img/nophoto@1x.png"
+                    srcset="img/nophoto@2x.png 2x"
+                    alt="Самый клевый чайник"
+                    width="210"
+                    height="209"
+                  />
                 </picture>
                 <p class="card__price">1 900 р.</p>
-                <button class="card__order-btn" aria-label="Добавить товар в корзину">
+                <button
+                  class="card__order-btn"
+                  aria-label="Добавить товар в корзину"
+                >
                   <picture>
-                    <source type="image/webp" srcset="img/basket@1x.webp 1x, img/basket@2x.webp 2x">
-                    <img class="card__order-image" src="img/basket@1x.png" srcset="img/basket@2x.png 2x" alt="Добавить товар в корзину" width="28" height="21">
+                    <source
+                      type="image/webp"
+                      srcset="img/basket@1x.webp 1x, img/basket@2x.webp 2x"
+                    />
+                    <img
+                      class="card__order-image"
+                      src="img/basket@1x.png"
+                      srcset="img/basket@2x.png 2x"
+                      alt="Добавить товар в корзину"
+                      width="28"
+                      height="21"
+                    />
                   </picture>
                 </button>
               </li>
               <li class="goods__item card">
-                <h3 class="card__title">Самый клевый чайник, который надо купить!</h3>
+                <h3 class="card__title">
+                  Самый клевый чайник, который надо купить!
+                </h3>
                 <picture>
-                  <source type="image/webp" srcset="img/nophoto@1x.webp 1x, img/nophoto@2x.webp 2x">
-                  <img class="card__image" src="img/nophoto@1x.png" srcset="img/nophoto@2x.png 2x" alt="Самый клевый чайник" width="210" height="209">
+                  <source
+                    type="image/webp"
+                    srcset="img/nophoto@1x.webp 1x, img/nophoto@2x.webp 2x"
+                  />
+                  <img
+                    class="card__image"
+                    src="img/nophoto@1x.png"
+                    srcset="img/nophoto@2x.png 2x"
+                    alt="Самый клевый чайник"
+                    width="210"
+                    height="209"
+                  />
                 </picture>
                 <p class="card__price">1 900 р.</p>
-                <button class="card__order-btn" aria-label="Добавить товар в корзину">
+                <button
+                  class="card__order-btn"
+                  aria-label="Добавить товар в корзину"
+                >
                   <picture>
-                    <source type="image/webp" srcset="img/basket@1x.webp 1x, img/basket@2x.webp 2x">
-                    <img class="card__order-image" src="img/basket@1x.png" srcset="img/basket@2x.png 2x" alt="Добавить товар в корзину" width="28" height="21">
+                    <source
+                      type="image/webp"
+                      srcset="img/basket@1x.webp 1x, img/basket@2x.webp 2x"
+                    />
+                    <img
+                      class="card__order-image"
+                      src="img/basket@1x.png"
+                      srcset="img/basket@2x.png 2x"
+                      alt="Добавить товар в корзину"
+                      width="28"
+                      height="21"
+                    />
                   </picture>
                 </button>
               </li>
@@ -311,7 +453,9 @@
                   <a class="pagination__link" href="#">2</a>
                 </li>
                 <li class="pagination__item">
-                  <a class="pagination__link pagination__link--current" href="#">3</a>
+                  <a class="pagination__link pagination__link--current" href="#"
+                    >3</a
+                  >
                 </li>
                 <li class="pagination__item">
                   <a class="pagination__link" href="#">4</a>
@@ -326,6 +470,14 @@
                   <a class="pagination__link" href="#">7</a>
                 </li>
               </ul>
+            </div>
+            <div class="catalog__about-us about-us">
+              <div class="about-us__left-column">
+                <p class="about-us__text">Компания «Пиксель Плюс» существует более 6 лет, за это время мы принимали участие в разработке более чем 700 сайтов, поэтому можем уверенно называть себя профессионалами. На данный момент наш коллектив состоит из более чем 30 сотрудников работающих в двух офисах в Москве и Зеленограде.характерные для этого жанра мотивы: неразделённой любви, ухода молодости, угасания души.</p>
+              </div>
+              <div class="about-us__right-column">
+                <p class="about-us__text">Одним из основных направлений работ нашей компании является поисковое продвижение сайтов, на данной момент мы работаем с более чем 150 постоянными клиентами по более чем 11 000 поисковым запросам. При этом в работе основной акцент мы делаем на качестве работ, а так же применяем собственные уникальные разработки в области SEO продвижения. На данный момент отдел SEO состоит из 9 человек под руководством ведущего специалиста, преимущественно работающих в нашем московском офисе.</p>
+              </div>
             </div>
           </div>
         </div>
