добавляет разметку для футера

--- a/source/index.html
+++ b/source/index.html
@@ -473,17 +473,86 @@
             </div>
             <div class="catalog__about-us about-us">
               <div class="about-us__left-column">
-                <p class="about-us__text">Компания «Пиксель Плюс» существует более 6 лет, за это время мы принимали участие в разработке более чем 700 сайтов, поэтому можем уверенно называть себя профессионалами. На данный момент наш коллектив состоит из более чем 30 сотрудников работающих в двух офисах в Москве и Зеленограде.характерные для этого жанра мотивы: неразделённой любви, ухода молодости, угасания души.</p>
+                <p class="about-us__text">
+                  Компания «Пиксель Плюс» существует более 6 лет, за это время
+                  мы принимали участие в разработке более чем 700 сайтов,
+                  поэтому можем уверенно называть себя профессионалами. На
+                  данный момент наш коллектив состоит из более чем 30
+                  сотрудников работающих в двух офисах в Москве и
+                  Зеленограде.характерные для этого жанра мотивы: неразделённой
+                  любви, ухода молодости, угасания души.
+                </p>
               </div>
               <div class="about-us__right-column">
-                <p class="about-us__text">Одним из основных направлений работ нашей компании является поисковое продвижение сайтов, на данной момент мы работаем с более чем 150 постоянными клиентами по более чем 11 000 поисковым запросам. При этом в работе основной акцент мы делаем на качестве работ, а так же применяем собственные уникальные разработки в области SEO продвижения. На данный момент отдел SEO состоит из 9 человек под руководством ведущего специалиста, преимущественно работающих в нашем московском офисе.</p>
+                <p class="about-us__text">
+                  Одним из основных направлений работ нашей компании является
+                  поисковое продвижение сайтов, на данной момент мы работаем с
+                  более чем 150 постоянными клиентами по более чем 11 000
+                  поисковым запросам. При этом в работе основной акцент мы
+                  делаем на качестве работ, а так же применяем собственные
+                  уникальные разработки в области SEO продвижения. На данный
+                  момент отдел SEO состоит из 9 человек под руководством
+                  ведущего специалиста, преимущественно работающих в нашем
+                  московском офисе.
+                </p>
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__cipyright copyright">
+          <p class="copyright__main">© 2012–2013 ЗАО «Компания»</p>
+          <p class="copuright__contacts">
+            <a class="copuright__mail" href="mailto:info@name.ru"
+              >info@name.ru</a
+            >
+          </p>
+        </div>
+        <div class="footer__navigation">
+          <ul class="site-list site-list__column">
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">Каталог</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">Доставка и оплата</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">Прайс-лист</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__studio studio">
+          <a class="studio__link" href="#">
+            <picture>
+              <source
+                type="image/webp"
+                srcset="img/logo-studio@1x.webp 1x, img/logo-studio@2x.webp 2x"
+              />
+              <img
+                class="studio__image"
+                src="img/logo-studio@1x.png"
+                srcset="img/logo-studio@2x.png 2x"
+                alt="Пиксель Плюс"
+                width="36"
+                height="38"
+              />
+            </picture>
+          </a>
+          <p class="studio__text">
+            <span>Разработка сайта</span> — компания «Пиксель Плюс»
+          </p>
+        </div>
+      </div>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
