--- a/source/index.html
+++ b/source/index.html
@@ -566,7 +566,7 @@
               </p>
               <p class="popup__form-container">
                 <label for="user-phone">Телефон <sup>*</sup></label>
-                <input id="user-phone" name="user-phone" type="text" inputmode="numeric" required>
+                <input id="user-phone" name="user-phone" type="number" required>
               </p>
               <p class="popup__form-container">
                 <label for="user-name">Email <sup>*</sup></label>
@@ -588,6 +588,10 @@
         </div>
       </div>
     </div>
+    <script src="js/vendor.js"></script>
     <script src="js/main.js"></script>
+    <script>
+      objectFitImages();
+    </script>
   </body>
 </html>
